<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/previous_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/min_value_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="2"
        tools:text="Previous result: 0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/min_value_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/max_value_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_result"
        app:layout_constraintVertical_weight="1"
        app:errorEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/min_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:background="@drawable/back_with_border"
            android:hint="@string/edit_text_hint_min"
            android:inputType="number"
            android:maxLength="10"
            android:padding="5dp"
            android:textSize="20sp"
            app:suffixText="@string/edit_text_hint_min" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/max_value_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_value_layout"
        app:layout_constraintVertical_weight="1"
        app:errorEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/max_value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:background="@drawable/back_with_border"
            android:hint="@string/edit_text_hint_max"
            android:inputType="number"
            android:maxLength="10"
            android:padding="5dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/generate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/button_generate_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/max_value_layout"
        app:layout_constraintVertical_weight="2" />


</androidx.constraintlayout.widget.ConstraintLayout>